<resources>
    <string name="app_name">W15_ContactsDB</string>

    <string name="contact_id">Contact ID</string>

    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="find">Find</string>

    <string name="contact_name">Name</string>
    <string name="contact_phone">Phone Number</string>

    <string name="not_assigned">Not Assigned</string>

    <string name="android_drawable">android drawable</string>
    <string name="todo">TODO</string>
    <string name="string_todo">trash can</string>
    <string name="enter_name">enter name</string>
    <string name="reset_list">Re-order</string>
    <string name="enter_phone_number">enter phone number</string>
    <string name="re_populate_list">Re-Populate</string>
    <string name="asc">Asc</string>
    <string name="desc">Desc</string>
    <string name="re_order_the_list">re-order the list</string>


</resources>