<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.MainFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:stretchColumns="0,1"
        android:layout_margin="5dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:id="@+id/etFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_name"

                android:importantForAutofill="no"
                android:inputType="none"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck" />
            <!--android:hintTextColor="#757575"-->

            <!--<Button
                android:id="@+id/btReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/reset_list"
                android:textColor="@color/white"
                />-->
            <!--style="@style/Widget.AppCompat.Button.Borderless.Colored"-->

            <ImageButton
                android:id="@+id/btReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/re_order_the_list"
                android:minHeight="48dp"
                android:src="@drawable/ic_reorder"
                android:layout_gravity="end|center_vertical"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:id="@+id/btPopulate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/re_order_the_list"
                android:minHeight="48dp"
                android:src="@drawable/ic_repopulate"
                android:layout_gravity="end|center_vertical"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:id="@+id/btDeleteAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/re_order_the_list"
                android:minHeight="48dp"
                android:src="@drawable/ic_deleteall"
                android:layout_gravity="end|center_vertical"
                tools:ignore="ImageContrastCheck" />



        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_phone_number"

                android:importantForAutofill="no"
                android:inputType="phone"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck" />
            <!--android:hintTextColor="#757575"-->

            <!--<Button
                android:id="@+id/btPopulate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/re_populate_list"
                android:textColor="@color/white" />-->
        </TableRow>

    </TableLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="5dp">

        <!--style="@style/Widget.AppCompat.Button.Borderless"-->

        <Button
            android:id="@+id/btAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btFind"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btFind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btSortAsc"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btAdd"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btSortAsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asc"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btSortDsc"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btFind"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btSortDsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btSortAsc"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contact_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp" />

    <!--android:layout_marginBottom="50dp"-->

</LinearLayout>